Fixed scrollbar showing at ~1280 near packages chart

--- a/ota-plus-web/app/reactapp/css/style.scss
+++ b/ota-plus-web/app/reactapp/css/style.scss
@@ -2712,6 +2712,7 @@ div[role=presentation] {
 
     .chart-panel {
         background: transparent;
+        overflow: hidden;
 
         .total-count {
             position: absolute;
